--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -72,7 +72,7 @@
 							<li><a href="videos"><i class="icon-wrench"></i>Vidéos</a></li>
 						</ul>
 					</li>
-					<li><a href="references">ÉVÉNEMENTS</a></li>
+					<li><a href="#">ÉVÉNEMENTS</a></li>
 					<li class="<?= $this->contact ?>"><a href="contact">Contact</a></li>
 				</ul>		
 	        </div><!--/.nav-collapse -->
@@ -81,15 +81,15 @@
 	</header>
 	<?php echo $this->layout()->content; ?>	
 	<footer>
-		<div class="copyright">
-			<div class="container">
-				<div class="row1-footer">
-					<div class="col-lg-6 col-lg-offset-3">
-						<p style="color: #000;">© 2015 fatine benaguida. TOUS DROITS RÉSERVÉS.&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;conçu par : MEDIA TUCH</p>
-					</div>
-				</div>			
+			<div class="copyright">
+				<div class="container">
+					<div class="row1-footer">
+						<div class="col-lg-6 col-lg-offset-3">
+							<p style="color: #000;">© 2015 fatine benaguida. TOUS DROITS RÉSERVÉS.&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;conçu par : MEDIA TUCH</p>
+						</div>
+					</div>			
+				</div>
 			</div>
-		</div>
 	</footer>
 
 </body>
