--- a/application/views/scripts/divers/index.phtml
+++ b/application/views/scripts/divers/index.phtml
@@ -1,26 +1,26 @@
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">PHOTOS | DIVERS</h3>
 		</div>
 	</div>
 
-	<div class="col-lg-10 col-lg-offset-1" style="padding: 0px; margin-bottom: 60px;">
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_01.jpg" src="images/divers/divers_miniature_01.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_02.jpg" src="images/divers/divers_miniature_02.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_03.jpg" src="images/divers/divers_miniature_03.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_04.jpg" src="images/divers/divers_miniature_04.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_05.jpg" src="images/divers/divers_miniature_05.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_06.jpg" src="images/divers/divers_miniature_06.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_07.jpg" src="images/divers/divers_miniature_07.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_08.jpg" src="images/divers/divers_miniature_08.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_09.jpg" src="images/divers/divers_miniature_09.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_10.jpg" src="images/divers/divers_miniature_10.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_11.jpg" src="images/divers/divers_miniature_11.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_12.jpg" src="images/divers/divers_miniature_12.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_13.jpg" src="images/divers/divers_miniature_13.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/divers/divers_14.jpg" src="images/divers/divers_miniature_14.jpg" rel="group1"/></span>
+	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_01.jpg" src="images/divers/divers_miniature_01.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_02.jpg" src="images/divers/divers_miniature_02.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_03.jpg" src="images/divers/divers_miniature_03.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_04.jpg" src="images/divers/divers_miniature_04.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_05.jpg" src="images/divers/divers_miniature_05.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_06.jpg" src="images/divers/divers_miniature_06.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_07.jpg" src="images/divers/divers_miniature_07.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_08.jpg" src="images/divers/divers_miniature_08.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_09.jpg" src="images/divers/divers_miniature_09.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_10.jpg" src="images/divers/divers_miniature_10.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_11.jpg" src="images/divers/divers_miniature_11.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_12.jpg" src="images/divers/divers_miniature_12.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_13.jpg" src="images/divers/divers_miniature_13.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/divers/divers_14.jpg" src="images/divers/divers_miniature_14.jpg" rel="group1"/></span>
     	
 	</div>
 	<!-- <div class="ref-item col-lg-4 col-md-6 <?= $ref['cat'] ?>">
