--- a/application/views/scripts/revues/index.phtml
+++ b/application/views/scripts/revues/index.phtml
@@ -1,12 +1,12 @@
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 ">
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">PHOTOS | REVUES</h3>
 		</div>
 	</div>
 
-	<div class="col-lg-10 col-lg-offset-1" style="padding: 0px; margin-bottom: 60px;">
+	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
     	<!-- revue -->
     	<span class="col-lg-4 col-md-4 col-xs-4"><img class="pics" data-glisse-big="images/revue/fatine_01.jpg" src="images/revue/fatine_miniature_01.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-md-4 col-xs-4"><img class="pics" data-glisse-big="images/revue/fatine_02.jpg" src="images/revue/fatine_miniature_02.jpg" rel="group1"/></span>
