--- a/application/views/scripts/about/index.phtml
+++ b/application/views/scripts/about/index.phtml
@@ -1,10 +1,10 @@
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">BIOGRAPHIE</h3>
 		</div>
 	</div>
-	<div class="col-lg-10 col-lg-offset-1">
+	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="about">
 			<img src="images/biographie.jpg" width="100%"/>
 			<p>Quae dum ita struuntur, indicatum est apud Tyrum indumentum regale textum occulte, incertum quo locante vel cuius usibus apparatum. ideoque rector provinciae tunc pater Apollinaris eiusdem nominis ut conscius ductus est aliique congregati sunt ex diversis civitatibus multi, qui atrocium criminum ponderibus urgebantur.</p>
@@ -25,10 +25,10 @@
 
 			<p>Eodem tempore Serenianus ex duce, cuius ignavia populatam in Phoenice Celsen ante rettulimus, pulsatae maiestatis imperii reus iure postulatus ac lege, incertum qua potuit suffragatione absolvi, aperte convictus familiarem suum cum pileo, quo caput operiebat, incantato vetitis artibus ad templum misisse fatidicum, quaeritatum expresse an ei firmum portenderetur imperium, ut cupiebat, et cunctum.</p>
 		</div>
-		<div class="col-lg-8 col-lg-offset-2">
+		<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
 			<div class="Rsocial col-lg-12">
 				<ul class="exemple ex1">
-					<h3 class="col-lg-5">SUIVEZ NOUS:</h3>
+					<h3 class="col-lg-5 col-xs-4">SUIVEZ NOUS:</h3>
 					<a id="fb" href=""><li class="col-lg-1"><img src="images/facebook.png" /></li></a>
 					<a id="twitter" href=""><li class="col-lg-1"><img src="images/twitter.png" /></li></a>
 					<a id="youtube" href=""><li class="col-lg-1"><img src="images/youtube.png" /></li></a>
