--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -110,35 +110,35 @@
  -->
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">CONTACTEZ-NOUS</h3>
 		</div>
 	</div>
-	<div class="col-lg-10 col-lg-offset-1" style="width: 89%; margin-left: 62px;  margin-top: 20px;">
+	<div id="form-style" class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="">
 		<form id="contact-form" class="form-contact" enctype="multipart/form-data">
-	        <span class="col-lg-6">
+	        <span class="col-lg-6 col-md-6 col-xs-12">
 	        	<p>VOTRE NOM *</p>
 	        	<input type="text" id="nom" name="name" >
 	        </span>
-	        <span class="col-lg-6">
+	        <span class="col-lg-6 col-md-6 col-xs-12">
 	        	<p>VOTRE EMAIL *</p>
 	        	<input type="text" id="mail" name="email">
 	        </span>
-	        <span class="col-lg-6">
+	        <span class="col-lg-6 col-md-6 col-xs-12">
 	        	<p>SUJET *</p>
 	        	<input type="text" id="nom" name="subject" >
 	        </span>
-	        <span class="col-lg-6">
+	        <span class="col-lg-6 col-md-6 col-xs-12">
 	        	<p>VOTRE NUMERO DU TELEPHONE *</p>
 	        	<input type="text" id="mail" name="numtel">
 	        </span>
-	        <span class="col-lg-12">
+	        <span class="col-lg-12 col-md-12 col-xs-12">
 	        	<p>VOTRE MESSAGE *</p>
 	        	<textarea rows="10" name="message"></textarea>
 	        </span>
-	        <span class="col-lg-12" style="margin-bottom: 60px;">
-				<span class="col-lg-4  col-md-4 col-lg-offset-4 col-md-offset-4" ><input type="submit" id="submit" value="ENVOYER" /></span>
+	        <span class="valider col-lg-12 col-md-12 col-xs-10 col-xs-offset-1" style="margin-bottom: 60px;">
+				<span class="col-lg-4  col-xs-12 col-md-4 col-lg-offset-4 col-md-offset-4" ><input type="submit" id="submit" value="ENVOYER" /></span>
 			</span>
     	</form>
 	</div>
