--- a/application/views/scripts/discographie/index.phtml
+++ b/application/views/scripts/discographie/index.phtml
@@ -5,216 +5,272 @@
 			<h3 class="col-lg-12 title-rub">VIDEOS</h3>
 		</div>
 
-		<div class="grid">
-			<figure class="effect-layla col-lg-2">
-				<img src="imgs/img1.jpg" alt="img01"/>
-				<figcaption>
-					<h2>Nice <span>Lily</span></h2>
-					<p>Lily likes to play with crayons and pencils</p>
-					<a href="#">View more</a>
-				</figcaption>			
-			</figure>
-		</div>
+		
 
 	</div>
+	<div class="col-lg-10 col-lg-offset-1 " style="padding: 0px; margin-bottom: 60px;">
+    	<div class="grid music">
+			<figure class="effect-layla col-lg-4 col-md-4">
+				<img src="imgs/img1.jpg" alt="img01"/>
+				<figcaption>
+					<h2>SAD &nbsp;<span>LBAB</span></h2>
+					<p>PLUS +</p>
+					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224377601&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
+				</figcaption>			
+			</figure>
 
+			<figure class="effect-layla col-lg-4 col-md-4">
+				<img src="imgs/img2.jpg" alt="img01"/>
+				<figcaption>
+					<h2>AL ADAMA &nbsp;<span>MAMENNOUCH</span></h2>
+					<p>PLUS +</p>
+					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/223671789&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
+				</figcaption>			
+			</figure>
+
+			<figure class="effect-layla col-lg-4 col-md-4">
+				<img src="imgs/img3.jpg" alt="img01"/>
+				<figcaption>
+					<h2>ANTA CHAFI... &nbsp;<span>YA RAHMAN</span></h2>
+					<p>PLUS +</p>
+					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/223671205&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
+				</figcaption>			
+			</figure>
+		</div>	
+	</div>
 	
+	
+	<div id="soundcloud-modal" class="modal fade" tabindex="-1" role="dialog">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      
+	      <div class="music-content">
+	        <iframe width="100%" height="450" scrolling="no" frameborder="no" src=""></iframe>
+	      </div>
+	      
+	    </div><!-- /.modal-content -->
+	  </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 
+	<script type="text/javascript">
+		$('.music .effect-layla .more').click(function (e) {
+			//if(!$(this).hasClass('active')) { 
+			$('.modal .music-content iframe').attr('src', $(this).attr('link'));
+			//$('.music .effect-layla .more').removeClass('active');
+			//$(this).addClass('active');
+			//}
+			$('#soundcloud-modal').modal('show');
+		})
+
+		$('#soundcloud-modal').on('hidden.bs.modal', function () {
+		  $('.modal .music-content iframe').attr('src', '');
+		});
+	</script>
 
 	<style>
+		.grid {
+			position: relative;
+			margin: 0 auto;
+			padding: 1em 0 4em;
+			max-width: 1000px;
+			list-style: none;
+			text-align: center;
+		}
 
-.grid {
-	position: relative;
-	margin: 0 auto;
-	padding: 1em 0 4em;
-	max-width: 1000px;
-	list-style: none;
-	text-align: center;
-}
+		/* Common style */
+		.grid figure {
+			position: relative;
+			float: left;
+			overflow: hidden;
+			/*margin: 10px 1%;
+			min-width: 320px;
+			max-width: 320px;*/
+			max-height: 280px;
+			text-align: center;
+			cursor: pointer;
+		}
 
-/* Common style */
-.grid figure {
-	position: relative;
-	float: left;
-	overflow: hidden;
-	margin: 10px 1%;
-	min-width: 320px;
-	max-width: 320px;
-	max-height: 320px;
-	background: #3085a3;
-	text-align: center;
-	cursor: pointer;
-}
+		.grid figure img {
+			position: relative;
+			display: block;
+			min-height: 100%;
+			max-width: 100%;
+			opacity: 0.8;
+		}
 
-.grid figure img {
-	position: relative;
-	display: block;
-	min-height: 100%;
-	max-width: 100%;
-	opacity: 0.8;
-}
+		.grid figure figcaption {
+			padding: 2em;
+			color: #fff;
+			text-transform: uppercase;
+			font-size: 1.25em;
+			-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+		}
 
-.grid figure figcaption {
-	padding: 2em;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 1.25em;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
+		.grid figure figcaption::before,
+		.grid figure figcaption::after {
+			pointer-events: none;
+		}
 
-.grid figure figcaption::before,
-.grid figure figcaption::after {
-	pointer-events: none;
-}
+		.grid figure figcaption,
+		.grid figure figcaption > a {
+			position: absolute;
+			top: 0;
+			left: 15px;
+			right: 15px;
+			/*width: 100%;*/
+			height: 100%;
+		}
 
-.grid figure figcaption,
-.grid figure figcaption > a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+		.grid figure figcaption > a {
+			width: 100%;
+			left: 0px;
+    		right: 0px;
+		}
 
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
-.grid figure figcaption > a {
-	z-index: 1000;
-	text-indent: 200%;
-	white-space: nowrap;
-	font-size: 0;
-	opacity: 0;
-}
+		/* Anchor will cover the whole item by default */
+		/* For some effects it will show as a button */
+		.grid figure figcaption > a {
+			z-index: 1000;
+			text-indent: 200%;
+			white-space: nowrap;
+			font-size: 0;
+			opacity: 0;
+		}
 
-.grid figure h2 {
-	word-spacing: -0.15em;
-	font-weight: 300;
-}
+		.grid figure h2 {
+			word-spacing: -0.15em;
+			font-weight: 300;
+			font-size: 22px;
+		}
 
-.grid figure h2 span {
-	font-weight: 800;
-}
+		.grid figure h2 span {
+			font-weight: 800;
+		}
 
-.grid figure h2,
-.grid figure p {
-	margin: 0;
-}
+		.grid figure h2,
+		.grid figure p {
+			margin: 0;
+		}
 
-.grid figure p {
-	letter-spacing: 1px;
-	font-size: 68.5%;
-}
+		.grid figure p {
+			letter-spacing: 1px;
+			font-size: 68.5%;
+			background: black;
+			border-radius: 20px;
+			color: #fff;
+			margin-top: 20px;
+			display: inline-block;
+		}
 
-/*---------------*/
-/***** Layla *****/
-/*---------------*/
+		/*---------------*/
+		/***** Layla *****/
+		/*---------------*/
 
-figure.effect-layla {
-	
-	padding: 0px;
-}
+		figure.effect-layla {
+			/*padding: 0px;*/
+		}
 
-figure.effect-layla img {
-	height: 360px;
-}
+		figure.effect-layla img {
+			height: 360px;
+		}
 
-figure.effect-layla figcaption {
-	padding: 3em;
-}
+		figure.effect-layla figcaption {
+			padding: 2em;
+		}
 
-figure.effect-layla figcaption::before,
-figure.effect-layla figcaption::after {
-	position: absolute;
-	content: '';
-	opacity: 0;
-}
+		figure.effect-layla figcaption::before,
+		figure.effect-layla figcaption::after {
+			position: absolute;
+			content: '';
+			opacity: 0;
+		}
 
-figure.effect-layla figcaption::before {
-	top: 50px;
-	right: 30px;
-	bottom: 50px;
-	left: 30px;
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	-webkit-transform: scale(0,1);
-	transform: scale(0,1);
-	-webkit-transform-origin: 0 0;
-	transform-origin: 0 0;
-}
+		figure.effect-layla figcaption::before {
+			top: 25px;
+		    right: 10px;
+		    bottom: 25px;
+		    left: 10px;
+			border-top: 1px solid #fff;
+			border-bottom: 1px solid #fff;
+			-webkit-transform: scale(0,1);
+			transform: scale(0,1);
+			-webkit-transform-origin: 0 0;
+			transform-origin: 0 0;
+		}
 
-figure.effect-layla figcaption::after {
-	top: 30px;
-	right: 50px;
-	bottom: 30px;
-	left: 50px;
-	border-right: 1px solid #fff;
-	border-left: 1px solid #fff;
-	-webkit-transform: scale(1,0);
-	transform: scale(1,0);
-	-webkit-transform-origin: 100% 0;
-	transform-origin: 100% 0;
-}
+		figure.effect-layla figcaption::after {
+			top: 10px;
+		    right: 25px;
+		    bottom: 10px;
+		    left: 25px;
+			border-right: 1px solid #fff;
+			border-left: 1px solid #fff;
+			-webkit-transform: scale(1,0);
+			transform: scale(1,0);
+			-webkit-transform-origin: 100% 0;
+			transform-origin: 100% 0;
+		}
 
-figure.effect-layla h2 {
-	padding-top: 26%;
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-}
+		figure.effect-layla h2 {
+			padding-top: 26%;
+			-webkit-transition: -webkit-transform 0.35s;
+			transition: transform 0.35s;
+		}
 
-figure.effect-layla p {
-	padding: 0.5em 2em;
-	text-transform: none;
-	opacity: 0;
-	-webkit-transform: translate3d(0,-10px,0);
-	transform: translate3d(0,-10px,0);
-}
+		figure.effect-layla p {
+			padding: 0.5em 2em;
+			text-transform: none;
+			opacity: 0;
+			-webkit-transform: translate3d(0,-10px,0);
+			transform: translate3d(0,-10px,0);
+		}
 
-figure.effect-layla img,
-figure.effect-layla h2 {
-	-webkit-transform: translate3d(0,-30px,0);
-	transform: translate3d(0,-30px,0);
-}
+		figure.effect-layla img,
+		figure.effect-layla h2 {
+			-webkit-transform: translate3d(0,-30px,0);
+			transform: translate3d(0,-30px,0);
+		}
 
-figure.effect-layla img,
-figure.effect-layla figcaption::before,
-figure.effect-layla figcaption::after,
-figure.effect-layla p {
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-}
+		figure.effect-layla img,
+		figure.effect-layla figcaption::before,
+		figure.effect-layla figcaption::after,
+		figure.effect-layla p {
+			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+			transition: opacity 0.35s, transform 0.35s;
+		}
 
-figure.effect-layla:hover {
-	background: red;
-}
+		figure.effect-layla:hover figcaption {
+			background: rgba(255, 0, 0, 0.7);
+		}
 
-figure.effect-layla:hover img {
-	opacity: 0.4;
-	/*-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);*/
-}
+		figure.effect-layla:hover img {
+			opacity: 0.4;
+			/*-webkit-transform: translate3d(0,0,0);
+			transform: translate3d(0,0,0);*/
+		}
 
-figure.effect-layla:hover figcaption::before,
-figure.effect-layla:hover figcaption::after {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
-}
+		figure.effect-layla:hover figcaption::before,
+		figure.effect-layla:hover figcaption::after {
+			opacity: 1;
+			-webkit-transform: scale(1);
+			transform: scale(1);
+		}
 
-figure.effect-layla:hover h2,
-figure.effect-layla:hover p {
-	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-}
+		figure.effect-layla:hover h2,
+		figure.effect-layla:hover p {
+			opacity: 1;
+			-webkit-transform: translate3d(0,0,0);
+			transform: translate3d(0,0,0);
+		}
 
-figure.effect-layla:hover figcaption::after,
-figure.effect-layla:hover h2,
-figure.effect-layla:hover p,
-figure.effect-layla:hover img {
-	-webkit-transition-delay: 0.15s;
-	transition-delay: 0.15s;
-}
+		figure.effect-layla:hover figcaption::after,
+		figure.effect-layla:hover h2,
+		figure.effect-layla:hover p,
+		figure.effect-layla:hover img {
+			-webkit-transition-delay: 0.15s;
+			transition-delay: 0.15s;
+		}
 	</style>
 	<!-- <div class="ref-item col-lg-4 col-md-6 <?= $ref['cat'] ?>">
 						        <a href="references/detail/id/<?= $ref['pid'] ?>"><div class="article"><img width="100%" height="266px" src="<?= $ref['img'] ?>" /></div>
