--- a/application/views/scripts/festivals/index.phtml
+++ b/application/views/scripts/festivals/index.phtml
@@ -1,17 +1,17 @@
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">PHOTOS | FESTIVALS</h3>
 		</div>
 	</div>
 
-	<div class="col-lg-10 col-lg-offset-1" style="padding: 0px; margin-bottom: 60px;">
+	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
     	<!-- fertival -->
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/festivals/festivals_01.jpg" src="images/festivals/festivals_miniature_01.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/festivals/festivals_02.jpg" src="images/festivals/festivals_miniature_02.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/festivals/festivals_03.jpg" src="images/festivals/festivals_miniature_03.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" data-glisse-big="images/festivals/festivals_04.jpg" src="images/festivals/festivals_miniature_04.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_01.jpg" src="images/festivals/festivals_miniature_01.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_02.jpg" src="images/festivals/festivals_miniature_02.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_03.jpg" src="images/festivals/festivals_miniature_03.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_04.jpg" src="images/festivals/festivals_miniature_04.jpg" rel="group1"/></span>
 	</div>
 	<!-- <div class="ref-item col-lg-4 col-md-6 <?= $ref['cat'] ?>">
 						        <a href="references/detail/id/<?= $ref['pid'] ?>"><div class="article"><img width="100%" height="266px" src="<?= $ref['img'] ?>" /></div>
