--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -32,22 +32,22 @@
     </div>
 </section>
 
-<section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+<section  class="container container-website col-lg-10 col-lg-offset-1 ">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
-			<h3 class="col-lg-8 title-rub">MUSIQUE</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<h3 class="col-lg-8 col-xs-6  title-rub">MUSIQUE</h3>
+			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
 <section  class="container container-website col-lg-10 col-lg-offset-1" style="padding: 0px; margin-top:0px;">
 	<div id="images" class="col-lg-12" >
 		<div class="owl-carousel-images">
-		    <div class="item-image"><img src="imgs/img1.jpg"></div>
-		    <div class="item-image"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image"><img src="imgs/img3.jpg"></div>
-		    <div class="item-image"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img1.jpg"></div>
+		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
 		</div>
 		<div class="navigation img"></div>
 	</div>
@@ -55,10 +55,10 @@
 
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
-			<h3 class="col-lg-8 title-rub">EN VIDEO</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<h3 class="col-lg-8 col-xs-6  title-rub">EN VIDEOS</h3>
+			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
@@ -75,19 +75,19 @@
 	</div>
 </section>
 <section  class="container container-website col-lg-10 col-lg-offset-1">
-	<div class="black-box col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
-			<h3 class="col-lg-8 title-rub">EN PHOTOS</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<h3 class="col-lg-8 col-xs-6  title-rub">EN PHOTOS</h3>
+			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
-	<div class="col-lg-10 col-lg-offset-1" style="padding: 0px; margin-bottom: 60px;">
-    	<span class="col-lg-4"><img class="pics" src="images/album1.jpg" data-glisse-big="images/album1.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" src="images/album2.jpg" data-glisse-big="images/album2.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" src="images/album3.jpg" data-glisse-big="images/album3.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" src="images/album4.jpg" data-glisse-big="images/album4.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" src="images/album5.jpg" data-glisse-big="images/album5.jpg" rel="group1"/></span>
-    	<span class="col-lg-4"><img class="pics" src="images/album6.jpg" data-glisse-big="images/album6.jpg" rel="group1"/></span>
+	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album1.jpg" data-glisse-big="images/album1.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album2.jpg" data-glisse-big="images/album2.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album3.jpg" data-glisse-big="images/album3.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album4.jpg" data-glisse-big="images/album4.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album5.jpg" data-glisse-big="images/album5.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" src="images/album6.jpg" data-glisse-big="images/album6.jpg" rel="group1"/></span>
 	</div>
 	<script>
 		$(function () {
