--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -36,18 +36,18 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">MUSIQUE</h3>
-			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
 <section  class="container container-website col-lg-10 col-lg-offset-1" style="padding: 0px; margin-top:0px;">
 	<div id="images" class="col-lg-12" >
 		<div class="owl-carousel-images">
-		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img1.jpg"></div>
-		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
-		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img1.jpg"></div>
+		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
 		</div>
 		<div class="navigation img"></div>
 	</div>
@@ -58,7 +58,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">EN VIDEOS</h3>
-			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
@@ -78,7 +78,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">EN PHOTOS</h3>
-			<a href="#"><h3 class="col-lg-4  col-xs-6 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
