--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -43,11 +43,11 @@
 <section  class="container container-website col-lg-10 col-lg-offset-1" style="padding: 0px; margin-top:0px;">
 	<div id="images" class="col-lg-12" >
 		<div class="owl-carousel-images">
-		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img1.jpg"></div>
-		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
-		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
-		    <div class="item-image col-lg-12 col-xs-8 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-md-12 col-xs-8 col-md-offset-0 col-xs-offset-2"><img src="imgs/img1.jpg"></div>
+		    <div class="item-image col-md-12 col-xs-8 col-md-offset-0 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-md-12 col-xs-8 col-md-offset-0 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
+		    <div class="item-image col-md-12 col-xs-8 col-md-offset-0 col-xs-offset-2"><img src="imgs/img2.jpg"></div>
+		    <div class="item-image col-md-12 col-xs-8 col-md-offset-0 col-xs-offset-2"><img src="imgs/img3.jpg"></div>
 		</div>
 		<div class="navigation img"></div>
 	</div>
