--- a/application/views/scripts/discographie/index.phtml
+++ b/application/views/scripts/discographie/index.phtml
@@ -2,7 +2,7 @@
 <section  class="container container-website col-lg-10 col-lg-offset-1">
 	<div class="black-box col-lg-10 col-lg-offset-1">
 		<div class="rub">
-			<h3 class="col-lg-12 title-rub">VIDEOS</h3>
+			<h3 class="col-lg-12 title-rub">DISCOGRAPHIE</h3>
 		</div>
 
 		
@@ -14,7 +14,7 @@
 				<img src="imgs/img1.jpg" alt="img01"/>
 				<figcaption>
 					<h2>SAD &nbsp;<span>LBAB</span></h2>
-					<p>PLUS +</p>
+					<p>EN SAVOIR PLUS</p>
 					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/224377601&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
 				</figcaption>			
 			</figure>
@@ -23,7 +23,7 @@
 				<img src="imgs/img2.jpg" alt="img01"/>
 				<figcaption>
 					<h2>AL ADAMA &nbsp;<span>MAMENNOUCH</span></h2>
-					<p>PLUS +</p>
+					<p>EN SAVOIR PLUS</p>
 					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/223671789&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
 				</figcaption>			
 			</figure>
@@ -31,8 +31,8 @@
 			<figure class="effect-layla col-lg-4 col-md-4">
 				<img src="imgs/img3.jpg" alt="img01"/>
 				<figcaption>
-					<h2>ANTA CHAFI... &nbsp;<span>YA RAHMAN</span></h2>
-					<p>PLUS +</p>
+					<h2>ANTA CHAFI... &nbsp;<br><span>YA RAHMAN</span></h2>
+					<p>EN SAVOIR PLUS</p>
 					<a class="more" link="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/223671205&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">View more</a>
 				</figcaption>			
 			</figure>
@@ -75,6 +75,7 @@
 			max-width: 1000px;
 			list-style: none;
 			text-align: center;
+			margin-bottom: 20px;
 		}
 
 		/* Common style */
@@ -88,6 +89,7 @@
 			max-height: 280px;
 			text-align: center;
 			cursor: pointer;
+			margin-bottom: 20px;
 		}
 
 		.grid figure img {
@@ -142,6 +144,8 @@
 			word-spacing: -0.15em;
 			font-weight: 300;
 			font-size: 22px;
+			background-color: rgba(8, 8, 8, 0.32);
+		    padding-bottom: 20px;
 		}
 
 		.grid figure h2 span {
@@ -153,14 +157,23 @@
 			margin: 0;
 		}
 
+		.grid figure h2 {
+			margin: 0 -35px;
+		    margin-top: -9px;
+		    height: 50%;
+		}
+
+		
+
 		.grid figure p {
 			letter-spacing: 1px;
-			font-size: 68.5%;
+			/*font-size: 70%;*/
 			background: black;
 			border-radius: 20px;
 			color: #fff;
 			margin-top: 20px;
 			display: inline-block;
+			font-family: 'BebasNeue';
 		}
 
 		/*---------------*/
