--- a/application/views/scripts/login/index.phtml
+++ b/application/views/scripts/login/index.phtml
@@ -1,5 +1,5 @@
 <section  class="container container-website">
-		<div class="container marketing"><img src="images/shadow.png" width="95%"></div>
+		<div class="container marketing"><!-- <img src="images/shadow.png" width="95%"> --></div>
 		<div class="container marketing box-white">
 			<div class="row">
 				<h3 style="margin: 30px 0px; margin-top: 60px;">
