--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -1,6 +1,10 @@
-
-<section  class="container container-website">
-		<!-- <div class="container marketing"><img src="images/shadow.png" width="95%"></div> -->
+<section  class="container container-website col-lg-10 col-lg-offset-1">
+	<div class="black-box col-lg-10 col-lg-offset-1">
+		<div class="rub">
+			<h3 class="col-lg-12 title-rub">Administartion</h3>
+		</div>
+	</div>
+	<div class="col-lg-10 col-lg-offset-1 ">
 		<div class="col-lg-12">
 			<ul class="admintabs nav nav-tabs" role="tablist">
 			    <li role="presentation" class="active"><a href="#music" aria-controls="music" role="tab" data-toggle="tab">Musique</a></li>
@@ -300,5 +304,11 @@
 			});
 
 		</script>
+	</div>
 </section>
+
+
+
+
+
 
