--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -141,10 +141,12 @@
 		    	<form id="gallery-form" class="col-lg-12 form-contact" enctype="multipart/form-data" method="post" style="margin-top: 30px;">
 					<span class="col-lg-12"><input type="hidden" name="completed" value="1"></span>
 					<span class="col-lg-12"><input type="hidden" name="type" value="gallery"></span>
+					<p class="col-lg-12">Thumbnail</p>
+					<span class="col-lg-12"><input type="file" name="img2" value=""></span>
 					<p class="col-lg-12">Image</p>
-					<span class="col-lg-12"><input type="file" name="img" value=""></span>
+					<span class="col-lg-12"><input type="file" name="img1" value=""></span>
 					<p class="col-lg-12">Catégorie</p>
-					<span class="col-lg-12"><input name="cat" value="Catégorie"></span>
+					<span class="col-lg-12"><input name="cat" value="[ TV & Radios / Festivals / Revues de presse / Divers ]"></span>
 					
 					<span class="col-lg-12"><span class="col-lg-4  col-md-4 col-lg-offset-4 col-md-offset-4"><input type="submit" id="submit" value="Ajouter"></span></span>
 				</form>
