--- a/application/views/scripts/festivals/index.phtml
+++ b/application/views/scripts/festivals/index.phtml
@@ -8,10 +8,13 @@
 
 	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
     	<!-- fertival -->
-    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_01.jpg" src="images/festivals/festivals_miniature_01.jpg" rel="group1"/></span>
+    	<?php foreach ($this->gallery as $key => $ms) {  ?>
+    		<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="<?= $ms['img'] ?>" src="<?= $ms['thumb'] ?>" rel="group1"/></span>
+    	<?php } ?>
+    	<!-- <span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_01.jpg" src="images/festivals/festivals_miniature_01.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_02.jpg" src="images/festivals/festivals_miniature_02.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_03.jpg" src="images/festivals/festivals_miniature_03.jpg" rel="group1"/></span>
-    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_04.jpg" src="images/festivals/festivals_miniature_04.jpg" rel="group1"/></span>
+    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/festivals/festivals_04.jpg" src="images/festivals/festivals_miniature_04.jpg" rel="group1"/></span> -->
 	</div>
 	<!-- <div class="ref-item col-lg-4 col-md-6 <?= $ref['cat'] ?>">
 						        <a href="references/detail/id/<?= $ref['pid'] ?>"><div class="article"><img width="100%" height="266px" src="<?= $ref['img'] ?>" /></div>
