--- a/application/views/scripts/radios/index.phtml
+++ b/application/views/scripts/radios/index.phtml
@@ -7,7 +7,11 @@
 
 	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
     	<!-- Radios -->
-    	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_01.jpg" src="images/radio/fatine_miniature_01.jpg" rel="group1"/></span>
+    	
+    	<?php foreach ($this->gallery as $key => $ms) {  ?>
+    		<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="<?= $ms['img'] ?>" src="<?= $ms['thumb'] ?>" rel="group1"/></span>
+    	<?php } ?>
+    	<!-- <span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_01.jpg" src="images/radio/fatine_miniature_01.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_02.jpg" src="images/radio/fatine_miniature_02.jpg" rel="group1"/></span>
     	<span class="col-lg-4  col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_03.jpg" src="images/radio/fatine_miniature_03.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_04.jpg" src="images/radio/fatine_miniature_04.jpg" rel="group1"/></span>
@@ -22,7 +26,7 @@
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_13.jpg" src="images/radio/fatine_miniature_13.jpg" rel="group1"/></span>
     	<span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_14.jpg" src="images/radio/fatine_miniature_14.jpg" rel="group1"/></span>
         <span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_15.jpg" src="images/radio/fatine_miniature_15.jpg" rel="group1"/></span>
-        <span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_16.jpg" src="images/radio/fatine_miniature_16.jpg" rel="group1"/></span>  
+        <span class="col-lg-4 col-xs-4 col-md-4"><img class="pics" data-glisse-big="images/radio/fatine_16.jpg" src="images/radio/fatine_miniature_16.jpg" rel="group1"/></span> -->  
 	</div>
 	<!-- <div class="ref-item col-lg-4 col-md-6 <?= $ref['cat'] ?>">
 						        <a href="references/detail/id/<?= $ref['pid'] ?>"><div class="article"><img width="100%" height="266px" src="<?= $ref['img'] ?>" /></div>
