--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -73,7 +73,7 @@
 								<li><a href="videos"><i class="icon-wrench"></i>Vidéos</a></li>
 							</ul>
 						</li>
-						<li><a href="#">ÉVÉNEMENTS</a></li>
+						<li><a href="event">ÉVÉNEMENTS</a></li>
 						<li class="<?= $this->contact ?>"><a href="contact">Contact</a></li>
 					</ul>		
 		        </div><!--/.nav-collapse -->
