--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -36,7 +36,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">MUSIQUE</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="discographie"><h3 class="col-lg-4 ticket-rub"><span>+ DE MUSIQUE &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
@@ -60,7 +60,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">EN VIDEOS</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="videos"><h3 class="col-lg-4 ticket-rub"><span>+ DE VIDEOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 </section>
@@ -82,7 +82,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">EN PHOTOS</h3>
-			<a href="#"><h3 class="col-lg-4 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="radios"><h3 class="col-lg-4 ticket-rub"><span>+ DE PHOTOS &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
 		</div>
 	</div>
 	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="padding: 0px; margin-bottom: 60px;">
