--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -4,12 +4,13 @@
 			<h3 class="col-lg-12 title-rub">Administartion</h3>
 		</div>
 	</div>
-	<div class="col-lg-10 col-lg-offset-1 ">
+	<div class="col-lg-10 col-lg-offset-1" style="padding: 0px; margin-bottom: 60px;">
 		<div class="col-lg-12">
 			<ul class="admintabs nav nav-tabs" role="tablist">
 			    <li role="presentation" class="active"><a href="#music" aria-controls="music" role="tab" data-toggle="tab">Musique</a></li>
 			    <li role="presentation"><a href="#videos" aria-controls="videos" role="tab" data-toggle="tab">Videos</a></li>
 			    <li role="presentation"><a href="#gallery" aria-controls="gallery" role="tab" data-toggle="tab">Gallery</a></li>
+			    <li role="presentation"><a href="#event" aria-controls="event" role="tab" data-toggle="tab">Evénements</a></li>
 			</ul>
 		</div>
 
@@ -47,6 +48,10 @@
 
 			.money {
 				text-align: right;
+			}
+
+			.admintabs li:not(.active) a {
+				color: #d14e3d;
 			}
 		</style>
 
@@ -92,7 +97,7 @@
 									<p style="word-break: break-all;"><?= $ms['link'] ?></p>
 								</td>
 								<td class="col-lg-2">
-									<button  class="remove <?= $ms['cat'] ?>" id="<?= $ms['id'] ?>" type="music">Supprimer</button>
+									<button  class="remove" id="<?= $ms['id'] ?>" type="music">Supprimer</button>
 								</td>		
 							</tr>
 					
@@ -129,7 +134,7 @@
 									<p style="word-break: break-all;"><?= $ms['link'] ?></p>
 								</td>
 								<td class="col-lg-2">
-									<button  class="remove <?= $ms['cat'] ?>" id="<?= $ms['id'] ?>" type="videos">Supprimer</button>
+									<button  class="remove" id="<?= $ms['id'] ?>" type="videos">Supprimer</button>
 								</td>		
 							</tr>
 					
@@ -174,6 +179,60 @@
 								</td>
 								<td class="col-lg-2">
 									<button  class="remove" id="<?= $ms['id'] ?>" type="gallery">Supprimer</button>
+								</td>		
+							</tr>
+					
+						<?php } ?>
+					</table>
+				</div>
+			</div>
+			<div role="tabpanel" class="tab-pane fade in" id="event">
+		    	<form id="events-form" class="col-lg-12 form-contact" enctype="multipart/form-data" method="post" style="margin-top: 30px;">
+					<span class="col-lg-12"><input type="hidden" name="completed" value="1"></span>
+					<span class="col-lg-12"><input type="hidden" name="type" value="events"></span>
+					<p class="col-lg-12">Image</p>
+					<span class="col-lg-12"><input type="file" name="img" value=""></span>
+					<p class="col-lg-12">Evénement</p>
+					<span class="col-lg-12"><input name="title" value=""></span>
+					<p class="col-lg-12">Date</p>
+					<span class="col-lg-12"><input name="date" value=""></span>
+					<p class="col-lg-12">Lieu</p>
+					<span class="col-lg-12"><input name="description" value=""></span>
+
+					<span class="col-lg-12"><span class="col-lg-4  col-md-4 col-lg-offset-4 col-md-offset-4"><input type="submit" id="submit" value="Ajouter"></span></span>
+				</form>
+				<br>
+				<hr>
+				<br>
+				<div class="col-lg-12">
+					<table class="financial">
+						<thead>
+			    	    	<tr>
+								<th>image</th>
+								<th>Evénement</th>
+								<th>Date</th>
+								<th>Lieu</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+
+						<?php foreach ($this->events as $key => $ms) { ?>
+							<tr>
+								<td class="col-lg-4">
+									<img width="100px" src="<?= $ms['img'] ?>"  
+								</td>
+								<td class="col-lg-3">
+									<h5><?= $ms['title'] ?></h5>
+								</td>
+								<td class="col-lg-3">
+									<h5><?= $ms['date'] ?></h5>
+								</td>
+								<td class="col-lg-3">
+									<h5><?= $ms['description'] ?></h5>
+								</td>
+								<td class="col-lg-2">
+									<button  class="remove" id="<?= $ms['id'] ?>" type="events">Supprimer</button>
 								</td>		
 							</tr>
 					
